[package]
name = "tdx-quote-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
dcap-qvl = "0.1.3"
reqwest = { version = "0.12.8", features = ["json"] }
scale = { version = "3.6.12", package = "parity-scale-codec" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
